--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
+    "emoji-picker-react": "^4.12.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-model": "^4.3.1",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.2",
     "vite-plugin-vercel": "^9.0.5"
   },
   "devDependencies": {
